# longfellow-zk

rust-longfellow-zk/: .gitignore  .gitkeep  .rustfmt.toml  ADVANCED_PROOF_BENCHMARKS.md  BENCHMARKING.md  BENCHMARK_COMPARISON.md  BENCHMARK_REPORT.md  BENCHMARK_TABLE.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  Cargo.toml  FINAL_BENCHMARK_TABLE.md  FINAL_REPORT.md  FINAL_SUMMARY.md  FULL_PROVER_REPORT.md  IMPLEMENTATION_STATUS.md  LICENSE-APACHE  LICENSE-MIT  LONGFELLOW_ZK_COMPREHENSIVE_REPORT.md  PERFORMANCE_SUMMARY.md  PRE_COMMIT_CHECKLIST.md  README.md  README_FULL_SYSTEM.md  REAL_VERIFICATION_BENCHMARK_REPORT.md  REED_SOLOMON_COMPARISON.md  TEST_AND_BENCHMARK_GUIDE.md  analyze_result.py  benchmark_all_proofs.sh  benchmark_comparison_output.txt  benchmark_comparison_output_with_asm.txt  benchmark_report.md  benchmark_report_with_asm.md  check_carry_overflow.py  check_field_value.py  check_omega.py  check_result.py  check_six_modp.py  clippy.toml  convert_r2.py  equivalence_test_output.txt  (+14 more)
rust-longfellow-zk/.github/workflows/: ci.yml
rust-longfellow-zk/benches/: generate_report.rs
rust-longfellow-zk/benchmark_results/: benchmark_report.md  elliptic-curve_proof.json  field-arithmetic_proof.json  field_bench.txt  gf2k_proof.json  ligero_proof.json  merkle-proof_proof.json  polynomial-commitment_proof.json
rust-longfellow-zk/demo_output/: field_arithmetic.json  hash_chain.json  matrix_multiplication.json  polynomial.json  summary_report.md
rust-longfellow-zk/full-prover/: Cargo.toml
rust-longfellow-zk/full-prover-output/: combined.json  elliptic-curve.json  field-arithmetic.json  gf2k.json  merkle-proof.json  polynomial-commitment.json
rust-longfellow-zk/full-prover/src/: generate_report.rs  main.rs  simple_field.rs
rust-longfellow-zk/interop-demo/: BINARY_FIXES_SUMMARY.md  Cargo.toml  README.md  RESULTS.md  WORKING_DEMO_SUMMARY.md  build.rs  manual_benchmark.sh  proof.json  run_complete_demo.sh  run_interop_demo.sh  run_minimal_demo.sh  run_super_minimal_demo.sh
rust-longfellow-zk/interop-demo/cpp/: CMakeLists.txt  example_verifier.cpp  longfellow_verifier.cpp  longfellow_verifier.hpp
rust-longfellow-zk/interop-demo/cpp-verifier/: CMakeLists.txt  cpp_verifier.cpp  cpp_verifier.hpp  verify_rust_proof  verify_rust_proof.cpp
rust-longfellow-zk/interop-demo/demo_output/: BENCHMARK_COMPARISON.md  COMPLETE_BENCHMARK_RESULTS.md  comparative_benchmark.json  field-arithmetic_rust.json  field_arithmetic.json  hash_chain.json  matrix_multiplication.json  polynomial.json  summary_report.md  test_polynomial.json
rust-longfellow-zk/interop-demo/demo_output_new/: field_arithmetic.json  hash_chain.json  matrix_multiplication.json  polynomial.json  summary_report.md
rust-longfellow-zk/interop-demo/src/: comparative_benchmark.rs  complete_demo.rs  cpp_verifier_full.rs  cpp_verifier_interop.rs  generate_test_proofs.rs  lib.rs  ligero_verifier_real.rs  minimal_prover.rs  proof_format_converter.rs  rust_prover.rs  rust_prover_old.rs  super_minimal.rs
rust-longfellow-zk/longfellow-algebra/: Cargo.toml
rust-longfellow-zk/longfellow-algebra/benches/: fft_bench.rs  field_arithmetic_bench.rs  field_bench.rs
rust-longfellow-zk/longfellow-algebra/examples/: alternative_montgomery.rs  analyze_result.rs  check_minus_one.rs  check_modulus_value.rs  check_omega_32.rs  check_one.rs  check_r_values.rs  check_result.rs  compare_intermediate_steps.py  compare_omega_2_30.rs  compare_rust_python.rs  compare_rust_python_omega.py  comprehensive_montgomery_test.rs  compute_correct_omega.py  compute_inv.rs  compute_montgomery_constants.py  compute_python_large_powers.py  convert_rust_values.py  correct_montgomery_ref.py  debug_constants.rs  debug_fp128.rs  debug_minus_one_mult.py  debug_mont_reduce.rs  debug_montgomery_calls.rs  debug_montgomery_constants.rs  debug_montgomery_form.rs  debug_montgomery_reduce.rs  debug_montgomery_reduction.rs  debug_montgomery_step_by_step.rs  debug_omega_detailed.rs  debug_omega_form.rs  debug_omega_order.rs  debug_omega_step_by_step.rs  debug_omega_value.rs  debug_one_value.rs  debug_overflow_handling.rs  debug_pow.rs  debug_pow_function.rs  debug_power_algorithm.rs  debug_python_calc.py  (+78 more)
rust-longfellow-zk/longfellow-algebra/src/: blas.rs  convolution.rs  fft.rs  fft_simd.rs  interpolation.rs  lib.rs  nat.rs  permutations.rs  polynomial.rs  reed_solomon.rs  reed_solomon_advanced.rs  reed_solomon_advanced_decode.rs  reed_solomon_lch14.rs  reed_solomon_unified.rs  traits.rs  utility.rs
rust-longfellow-zk/longfellow-arrays/: Cargo.toml
rust-longfellow-zk/longfellow-arrays/benches/: array_operations_bench.rs
rust-longfellow-zk/longfellow-arrays/src/: affine.rs  dense.rs  eq.rs  eqs.rs  lib.rs  sparse.rs
rust-longfellow-zk/longfellow-benchmarks/: comprehensive_bench.rs
rust-longfellow-zk/longfellow-cbor/: Cargo.toml
rust-longfellow-zk/longfellow-cbor/src/: jwt.rs  lib.rs  mdoc.rs  vc.rs
rust-longfellow-zk/longfellow-circuits/: Cargo.toml
rust-longfellow-zk/longfellow-circuits/src/: arithmetic.rs  boolean.rs  comparison.rs  gadgets.rs  hash.rs  lib.rs
rust-longfellow-zk/longfellow-core/: Cargo.toml
rust-longfellow-zk/longfellow-core/src/: error.rs  lib.rs  types.rs
rust-longfellow-zk/longfellow-ec/: Cargo.toml
rust-longfellow-zk/longfellow-ec/benches/: ec_bench.rs
rust-longfellow-zk/longfellow-ec/src/: circuit.rs  ecdsa.rs  lib.rs
rust-longfellow-zk/longfellow-equivalence-tests/: Cargo.toml  build.rs
rust-longfellow-zk/longfellow-gf2k/: Cargo.toml
rust-longfellow-zk/longfellow-ligero/: Cargo.toml
rust-longfellow-zk/longfellow-merkle/: Cargo.toml
rust-longfellow-zk/longfellow-random/: Cargo.toml
rust-longfellow-zk/longfellow-sumcheck/: Cargo.toml  proof.json  test_fp128.rs
rust-longfellow-zk/longfellow-util/: Cargo.toml
rust-longfellow-zk/longfellow-zk/: Cargo.toml
rust-longfellow-zk/scripts/: build_and_demo.sh
rust-longfellow-zk/test_reports_output/: README.md  benchmark_performance_report.md  equivalence_test_report.md  module_test_results.json  technical_implementation_summary.md
(+66 files in other folders)
