[workspace]
members = [
    "longfellow-core",
    "longfellow-algebra",
    "longfellow-arrays",
    "longfellow-cbor",
    "longfellow-ec",
    "longfellow-gf2k",
    "longfellow-random",
    "longfellow-util",
    "longfellow-merkle",
    "longfellow-sumcheck",
    "longfellow-ligero",
    "longfellow-zk",
    "longfellow-circuits",
    "longfellow-equivalence-tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Longfellow Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/longfellow-zk-rust"

[workspace.dependencies]
# Core dependencies
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
p256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
rand_chacha = "0.3"
zeroize = { version = "1.7", features = ["derive"] }

# Performance
rayon = "1.8"
rustfft = "6.1"

# Compression
zstd = "0.13"

# Testing
criterion = "0.5"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"