[package]
name = "longfellow-algebra"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
longfellow-core = { path = "../longfellow-core" }
thiserror = { workspace = true }
serde = { workspace = true }
zeroize = { workspace = true }
rustfft = { workspace = true }
num-traits = "0.2"
num-bigint = "0.4"
subtle = "2.5"
paste = "1.0"
rayon = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "fft_bench"
harness = false

[[bench]]
name = "field_bench"
harness = false