[package]
name = "longfellow-cbor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
longfellow-core = { path = "../longfellow-core" }
longfellow-algebra = { path = "../longfellow-algebra" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_cbor = "0.11"
ciborium = "0.2"
base64 = "0.21"

[dev-dependencies]
hex = "0.4"