[package]
name = "longfellow-random"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
longfellow-core = { path = "../longfellow-core" }
longfellow-algebra = { path = "../longfellow-algebra" }
thiserror = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }